Models and show it in templates

--- a/table/templates/table/pages/home.html
+++ b/table/templates/table/pages/home.html
@@ -5,6 +5,6 @@
 {% block content %}
 
         <div class="main-content container main-content-list">
-
+                {% include 'table/partials/table.html' %}
         </div>
 {% endblock content %}
